2012-06-28  Csaba Osztrogonác  <ossy@webkit.org>

        [WK2] New fast/events/drag-display-none-element.html fails
        https://bugs.webkit.org/show_bug.cgi?id=90177

        Unreviewed gardening, skip the new failing test.

        * platform/wk2/Skipped:

2012-06-28  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] css3/filters/huge-region-composited.html makes css3/filters/huge-region.html crash
        https://bugs.webkit.org/show_bug.cgi?id=90165

        [Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS)
        https://bugs.webkit.org/show_bug.cgi?id=90167

        Unreviewed gardening, skip the guilty tests.

        * platform/qt/Skipped:

2012-06-28  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Restore original value of mock scrollbars between tests
        https://bugs.webkit.org/show_bug.cgi?id=90155

        Reviewed by Simon Hausmann.

        * platform/qt/Skipped: Unskip tests which doesn't break anything now.

2012-06-28  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL] Gardening after r121388
        https://bugs.webkit.org/show_bug.cgi?id=90145

        Unreviewed EFL gardening. The new fast/events/drag-display-none-element.html 
        test added in r121388 does not pass on EFL port because of missing drag'n'drop support.

        * platform/efl/TestExpectations:

2012-06-28  Kent Tamura  <tkent@chromium.org>

        Classify form control states by their owner forms
        https://bugs.webkit.org/show_bug.cgi?id=89950

        Reviewed by Hajime Morita.

        * fast/forms/resources/state-restore-per-form-back.html: Added.
        * fast/forms/state-restore-per-form-expected.txt:
        Added. This contains some FAIL lines. They are expected and will
        be fixed in webkit.org/b/89962.
        * fast/forms/state-restore-per-form.html: Added.
        * fast/forms/state-restore-broken-state-expected.txt:
        Updated for the serialization format change.
