@@ -2532,7 +2532,3 @@ fast/block/positive-margin-start-negative-margin-end-align-center.html
 # [Qt] css3/filters/huge-region-composited.html makes css3/filters/huge-region.html crash
 # https://bugs.webkit.org/show_bug.cgi?id=90165
 css3/filters/huge-region-composited.html
-
-# [Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS)
-# https://bugs.webkit.org/show_bug.cgi?id=90167
-inspector/styles/inject-stylesheet.html
