@@ -1,3 +1,15 @@
+2012-06-28  Alexander Pavlov  <apavlov@chromium.org>
+
+        [Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS)
+        https://bugs.webkit.org/show_bug.cgi?id=90167
+
+        Reviewed by Csaba Osztrogonác.
+
+        DRT should remove user stylesheets from the page group when resetting before running another test.
+
+        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
+        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
+
 2012-06-28  Csaba Osztrogonác  <ossy@webkit.org>
 
         [Qt][DRT] Reset AcceleratedCompositingEnabled between tests
